--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
 </head>
 <body>
     <div class="container">
+        
         <header>
             <h1>Meu Perfil</h1>
         </header>
 
         <section>
+
             <div class="imagem">
-                <img src="imagens/foto-perfil.png" alt="Foto de Perfil">
+                <img src="imagens/foto-perfil.jpg" alt="Foto de Perfil">
             </div>
+
             <div class="nome">
                 <h2>Gabriel Ribeiro Maschio</h2>
             </div>
+
             <div class="texto">
                 <p>Sou estudante de Análise e Desenvolvimento de Sistemas, tenho 18 anos e pretendo atuar na área de front-end. Atualmente moro em Santa Fé do Sul.</p>
             </div>
             
             <div class="icon-stack">
-                <h2>Estudando no momento:</h2>
+
+                <h2>Estudando no momento</h2>
+
                 <div class="icon">
+
                     <ul>
                         <li id="html">
                             <div data="HTML">
@@ -77,9 +84,47 @@
                             </div>
                         </li>
                     </ul>
+
                 </div>
+
             </div>
+
+            <div class="social-media">
+
+                <h2>Redes Sociais</h2>
+
+                <div class="redes">
+
+                    <ul>
+                        <li>
+                            <div>
+                                <a href="https://www.instagram.com/maschio_gabriel/?hl=pt-br" target="_blank">
+                                    <img src="imagens/instagram.ico" alt="Icone Instragram">
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://twitter.com/GabrielMaschio0" target="_blank">
+                                    <img src="imagens/twitter.ico" alt="Icone Twitter">
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <a href="https://www.youtube.com/channel/UCVtLk5EgcQ21x9rhpxz96-Q" target="_blank">
+                                    <img src="imagens/youtube.ico" alt="Icone YouTube">
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
+            </div>
+
         </section>
+
     </div>
 </body>
 </html>
